# VELORO

./: Collaboration Scenarios.txt  PROJECT_BRIEF.md  Phase2-Pages.txt  RoughsOfVeloro-MVP.txt  ShortImprovements.txt  Stages.txt  commands  dump.rdb  settings.py  tailwind.config.js  urls.py
backend/: .env  .gitignore  all_data.json  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  celerybeat-schedule.dir  load_data.py  pyproject.toml  requirements.txt
backend/Profile/: admin.py  models.py  serializer.txt  serializers.py  urls.py  views.py
backend/Profile/migrations/: 0001_initial.py  0002_initial.py  0003_freelancerprofile_primary_email.py  0004_remove_freelancerprofile_id_verified_and_more.py
backend/client/: DashBoardViews.py  admin.py  apps.py  celery.py  consumers.py  models.py  profileViews.py  routing.py  serializers.py  signals.py  tasks.py  urls.py  views.py
backend/client/migrations/: 0001_initial.py  0002_event_description_event_end_alter_event_start.py  0002_initial.py  0003_alter_event_start.py  0004_remove_event_description_remove_event_end_and_more.py  (+3 more)
backend/collaborations/: admin.py  models.py  serializers.py
backend/core/: admin.py  consumers.py  models.py  routing.py  serializers.py  signals.py  urls.py  views.py
backend/financeapp/: admin.py  apps.py  urls.py  views.py
backend/freelancer/: models.py
backend/freelancer_hub/: asgi.py  celery.py  middleware.py  settings.py  urls.py  websocket_routing.py
backend/talentrise/: admin.py  apps.py  models.py  views.py
backend/tests/: test_serializers.py
(+257 files in other folders)
